--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             
-            <h4 class="row" style="margin: 0px; padding-bottom: 5px;">5 Day Forecast:</h4> 
+            <h4 class="row" style="margin: 0px; padding-bottom: 5px;"></h4> 
             <section class="row forecast">   
                 <!-- <div class="col card text-white bg-primary mb-3 col" style="max-width: auto;">
                     <div id="display" class="card-header day">Day</div>
